난 유다이슨이라구!! 유타이슨이 될거다!!

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/demo_build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/demo_build.data",
+        dataUrl: "https://media.githubusercontent.com/media/danah-dev/Unity_WebGL/main/Build/demo_build.data",
         frameworkUrl: buildUrl + "/demo_build.framework.js",
         codeUrl: buildUrl + "/demo_build.wasm",
         streamingAssetsUrl: "StreamingAssets",
